# fake-invoice-detector

./: README.md  package-lock.json
backend/: pyproject.toml
backend/app/: .env  api.py  main.py
my-app/: package-lock.json  package.json
my-app/src/: App.css  App.tsx  index.css  main.tsx
my-app/src/components/ui/: Sidebar.tsx
my-app/src/data/: results.ts
my-app/src/hooks/: useLandscape.ts
my-app/src/layouts/: RootLayout.tsx
my-app/src/pages/: ResultsDetailsPage.tsx  UploadPage.tsx  results.tsx  start.tsx
my-app/src/results/: App.tsx  History.tsx  Results.tsx  ResultsDetailsPage.tsx  Start.tsx  UploadPage.tsx
