[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Havyn Liew Xiang Rong <liew321@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
