[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Havyn Liew Xiang Rong <liew321@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
boto3 = "^1.40.35"
python-multipart = "^0.0.20"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
